<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/loginLayout">

    <ImageView
        android:id="@+id/imagen_logo"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:src="@mipmap/logo2"
        android:transitionName="logo_trans" />

    <TextView
        android:id="@+id/texto01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto02"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:transitionName="texto_trans"/>
    <TextView
        android:id="@+id/texto02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto03"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etUser"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUser" />
    <Button
        android:id="@+id/btn_olvidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:text="@string/texto04"
        android:textSize="12sp"
        android:textColor="#777"
        android:background="#00000000"/>
    <Button
        android:id="@+id/bInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto05"
        android:background="#F86435"/>


    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto06"
        android:textColor="#022B3E"
        android:background="#00000000"/>
</LinearLayout>